--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "helmet": "^4.1.1",
     "mongoose": "^5.10.7"
   },
   "devDependencies": {
