--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-validator": "^6.6.1",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.7"
